tests/samples/invalid/negative_u32.pn
fn main() -> u32
{
	var x = -23u32;
	return: x
}
